test/conformance/chainsaw/deleting-policies/namespaced/schedule/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ndpol-schedule
