test/conformance/chainsaw/deleting-policies/namespaced/schedule/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: test-restart-deletingpolicy-role
  namespace: ndpol-schedule
rules:
  - apiGroups: [""]
    resources: ["pods"]
    verbs: ["get", "list", "delete"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: test-restart-deletingpolicy-rolebinding
  namespace: ndpol-schedule
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: test-restart-deletingpolicy-role
subjects:
  - kind: ServiceAccount
    name: kyverno-cleanup-controller
    namespace: kyverno
